Clean up after automatic refactor (until build works)